--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -28,6 +28,7 @@
   border-color: black;
 }
 .search-btn {
+  cursor: pointer;
   background: #4e75ff;
   border-radius: 8px;
   padding: 8px 16px;
@@ -44,6 +45,25 @@
 }
 .search-btn:hover {
   background: #6c8cff;
+}
+.load-btn {
+  cursor: pointer;
+  display: none;
+  margin: 0 auto;
+  margin-top: 40px;
+  font-family: 'Montserrat', sans-serif;
+  border: none;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  background: #4e75ff;
+  color: #fff;
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 125px;
+  height: 40px;
+  transition: all 0.3s ease;
 }
 .gallery {
   display: flex;
